kyy-k8s-config/src/app/frontend/fe-wap/fe-wap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: fe-wap
  name: fe-wap
spec:
  replicas: 4
  strategy: {}
  template:
    metadata:
      labels:
        app: fe-wap
    spec:
      containers:
        - image: registry.cn-beijing.aliyuncs.com/kaoyaya/fe-wap
          name: fe-wap
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
