kyy-k8s-config/src/app/frontend/fe-wap/fe-wap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: fe-wap
  name: fe-wap
spec:
  rules:
    - host: '*.kaoyaya.com'
      http:
        paths:
          - backend:
              serviceName: fe-wap
              servicePort: 80
            path: /i/
    - http:
        paths:
          - backend:
              serviceName: fe-wap
              servicePort: 80
            path: /i/
